# esp-wasmachine

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  README_CN.md  partitions.4mb.single_app.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  sdkconfig.esp-box
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml  upload_component.yml
.gitlab/ci/: build.yml  pre_check.yml  rules.yml  test_deploy.yml
components/boards/: CMakeLists.txt  Kconfig.wasmachine
components/boards/common/lvgl/: lv_port.c  lv_port_fs.c
components/boards/esp-box/: partitions.csv  sdkconfig.defaults
components/boards/esp-box/include/: bsp_board.h
components/boards/esp32s3-devkitc/: bsp_board.c  partitions.csv  sdkconfig.defaults
components/data_sequence/: idf_component.yml
components/data_sequence/include/: data_seq.h
components/data_sequence/src/: data_seq.c
components/data_sequence/test/: CMakeLists.txt
components/extended_vfs/: CMakeLists.txt  Kconfig.wasmachine
components/extended_vfs/include/: wm_ext_vfs.h
components/extended_vfs/include/ioctl/: esp_gpio_ioctl.h  esp_i2c_ioctl.h
components/extended_vfs/private_include/: wm_ext_vfs_export.h
components/extended_vfs/src/: wm_ext_vfs.c  wm_ext_vfs_gpio.c  wm_ext_vfs_i2c.c
components/extended_wasm_native/: CMakeLists.txt  Kconfig.wasmachine  idf_component.yml
components/extended_wasm_native/include/: wm_ext_wasm_native.h  wm_ext_wasm_native_common.h
components/extended_wasm_native/private_include/: wm_ext_wasm_native_data_seq.h  wm_ext_wasm_native_export.h  wm_ext_wasm_native_lvgl.h  wm_ext_wasm_native_macro.h  wm_ext_wasm_native_vfs_ioctl.h
components/extended_wasm_native/src/: wm_ext_wasm_native.c  wm_ext_wasm_native_common.c  wm_ext_wasm_native_http_client.c  wm_ext_wasm_native_libc.c  wm_ext_wasm_native_libm.c  wm_ext_wasm_native_lvgl.c  wm_ext_wasm_native_mqtt.c  wm_ext_wasm_native_rmaker.c  wm_ext_wasm_native_vfs_ioctl.c  wm_ext_wasm_native_wifi_provisioning.c
components/extended_wasm_vfs/: CMakeLists.txt  idf_component.yml
components/extended_wasm_vfs/include/: wm_ext_wasm_vfs_ioctl.h
components/extended_wasm_vfs/src/: wm_ext_wasm_vfs_ioctl.c
components/shell/: CMakeLists.txt  Kconfig.wasmachine  idf_component.yml
components/shell/include/: shell.h  wm_shell.h
components/shell/private_include/: shell_cmd.h  shell_config.h  shell_utils.h
components/shell/src/: shell_init.c  shell_install.c  shell_iwasm.c  shell_ls.c  shell_uninstall.c  shell_utils.c  shell_wifi.c
components/wamr/: CMakeLists.txt  Kconfig  Kconfig.wasmachine
components/wamr/esp-libc-wasi/: esp_libc_wasi_wrapper.c
components/wamr/esp-libc-wasi/include/: esp_wamr.h
components/wamr/src/: openat.c
components/wasmachine/: CMakeLists.txt  Kconfig.projbuild  Kconfig.wasmachine  idf_component.yml
components/wasmachine/include/: wm_wamr.h
components/wasmachine/src/: wm_wamr.c  wm_wamr_app_mgr.c
components/wasmachine_core/: CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/wasmachine_core/include/: wm_config.h  wm_wamr.h
components/wasmachine_core/src/: wm_wamr.c  wm_wamr_app_mgr.c
components/wasmachine_data_sequence/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/wasmachine_data_sequence/include/: data_seq.h
components/wasmachine_data_sequence/src/: data_seq.c
components/wasmachine_data_sequence/test/: CMakeLists.txt  (+1 more)
components/wasmachine_ext_wasm_native/: CHANGELOG.md  CMakeLists.txt  Kconfig.wasmachine  README.md  idf_component.yml  linker.lf  project_include.cmake
components/wasmachine_ext_wasm_native/include/: wm_ext_wasm_native.h  wm_ext_wasm_native_common.h  wm_ext_wasm_native_export.h
components/wasmachine_ext_wasm_native/private_include/: wm_ext_wasm_native_export.h  wm_ext_wasm_native_lvgl.h  wm_ext_wasm_native_macro.h
components/wasmachine_ext_wasm_native/src/: wm_ext_wasm_native.c  wm_ext_wasm_native_common.c  wm_ext_wasm_native_http_client.c  wm_ext_wasm_native_libc.c  wm_ext_wasm_native_libm.c  wm_ext_wasm_native_lvgl.c  wm_ext_wasm_native_mqtt.c  wm_ext_wasm_native_rmaker.c  wm_ext_wasm_native_wifi_provisioning.c
components/wasmachine_ext_wasm_native/tools/: apply_patch.py
components/wasmachine_ext_wasm_native/tools/patches/: lvgl.patch
components/wasmachine_ext_wasm_native_rainmaker/: CHANGELOG.md  CMakeLists.txt  Kconfig.wasmachine  README.md  idf_component.yml
components/wasmachine_ext_wasm_native_rainmaker/src/: wm_ext_wasm_native_rmaker.c
components/wasmachine_ext_wasm_vfs/: CHANGELOG.md  CMakeLists.txt  Kconfig.wasmachine  README.md  idf_component.yml
components/wasmachine_ext_wasm_vfs/include/: wm_ext_wasm_vfs.h  wm_ext_wasm_vfs_ioctl.h
components/wasmachine_ext_wasm_vfs/private_include/: wm_ext_wasm_vfs_data_seq.h
components/wasmachine_ext_wasm_vfs/src/: wm_ext_wasm_vfs.c  wm_ext_wasm_vfs_ioctl.c
components/wasmachine_shell/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/wasmachine_shell/include/: wm_shell.h
components/wasmachine_shell/private_include/: shell_cmd.h  shell_config.h  shell_utils.h
components/wasmachine_shell/src/: shell_free.c  shell_init.c  shell_install.c  shell_iwasm.c  shell_ls.c  shell_query.c  shell_uninstall.c  shell_utils.c  shell_wifi.c
examples/wasmachine/: .build-test-rules.yml  .gitignore  CMakeLists.txt  partitions.4mb.single_app.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.esp-box  sdkconfig.esp32_p4_function_ev_board
examples/wasmachine/main/: CMakeLists.txt  idf_component.yml  wm_main.c
examples/wasmachine/main/fs_image/wasm/: hello_world.wasm
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  wasmachine_main.c  wm_main.c
tools/: setup_components.py
tools/ci/: astyle_config.yaml  build_apps.py  check_copyright_config.yaml  upload.sh
tools/patch/: esp-bsp.patch  esp-idf.patch  esp_littlefs.patch  lvgl.patch  wasm-micro-runtime.patch
(+2 files in other folders)
